# water_lab_wgpu

./: Cargo.toml  README.md
src/: main.rs
src/app/: controls.rs  mod.rs  state.rs
src/collections/: consts.rs  mod.rs  structs.rs  vertices.rs
src/init/: init_functions.rs  mod.rs
src/shaders/: frag.wgsl  v2.wgsl
src/shaders/compute/: generate_terrain.wgsl
src/updates/: mod.rs  param_updates.rs
